[package]
name = "zc-streamer"
version = "0.1.0"
description = "Zero-copy UDP streaming tool using io_uring for solana"
license = "MIT"
edition = "2024"

[[bin]]
name = "zcbench"
required-features = ["cli"]

[features]
default = ["cli"]
cli = [
    "dep:clap",
    "dep:humantime",
    "dep:ctrlc",
    "dep:pretty_env_logger"
]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
core_affinity = "~0.8.3"
crossbeam-channel = "~0.5.15"
ctrlc = { version = "3", optional = true }
humantime = { version = "2", optional = true }
io-uring = "~0.7.9"
libc = "~0.2.175"
log = "~0.4.27"
pretty_env_logger = { version = "0.5.0", optional = true }
rand = "~0.9.2"
slab = "0.4.11"
socket2 = "0.6.0"
solana-net-utils = "2"
thiserror = "2"

[dev-dependencies]
solana-streamer = "2.3.7"
